--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.79",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "antd": "^5.15.2",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "mobx-state-tree": "^5.4.1",
